--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,10 @@ h6 {
 }
 
 /*--------------------*/
+:root {
+  --animate-duration: 2s;
+}
+
 body {
   font-family: "Tenor Sans", sans-serif;
   background: rgb(63, 94, 251);
@@ -112,11 +116,10 @@ body {
 }
 
 .header {
-  margin-top: 20px;
-  margin-bottom: 50px;
   padding: 10px;
 }
 .header h1 {
+  margin: 30px 0;
   font-size: 3rem;
   text-align: center;
   color: white;
