--- a/src/style.scss
+++ b/src/style.scss
@@ -1,6 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Tenor+Sans&display=swap");
 @import "_nullstyle.scss";
 
+:root {
+  --animate-duration: 2s;
+}
+
 body {
   font-family: "Tenor Sans", sans-serif;
   background: rgb(63, 94, 251);
@@ -19,10 +23,10 @@ body {
 }
 
 .header {
-  margin-top: 20px;
-  margin-bottom: 50px;
+  
   padding: 10px;
   h1 {
+    margin: 30px 0;
     font-size: 3rem;
     text-align: center;
     color: white;
